# roborscht

./: .gitignore  README.md  aliases.sh
src/roborscht_description/: CMakeLists.txt  package.xml
src/roborscht_description/launch/: display.launch.py  display_arm.launch.py  display_hand.launch.py
src/roborscht_description/meshes/: base_link.STL  distal_link.STL  metacarpal_link.STL  middle_link.STL  proximal_link.STL
src/roborscht_description/meshes/roborscht_v0/: index_distal_link.STL  index_metacarpal_link.STL  index_middle_link.STL  index_proximal_link.STL  little_distal_link.STL  little_metacarpal_link.STL  little_middle_link.STL  little_proximal_link.STL  middle_distal_link.STL  middle_metacarpal_link.STL  middle_proximal_link.STL  middlle_middle_link.STL  ring_distal_link.STL  ring_metacarpal_link.STL  ring_middle_link.STL  ring_proximal_link.STL  thumb_aa_link.STL  thumb_distal_link.STL  thumb_metacarpal_link.STL  thumb_proximal_link.STL  wrist_link.STL
src/roborscht_description/meshes/roborscht_v1/: index_distal_link.STL  index_metacarpal_link.STL  index_middle_link.STL  index_proximal_link.STL  little_distal_link.STL  little_metacarpal_link.STL  little_middle_link.STL  little_proximal_link.STL  middle_distal_link.STL  middle_metacarpal_link.STL  middle_proximal_link.STL  middlle_middle_link.STL  ring_distal_link.STL  ring_metacarpal_link.STL  (+7 more)
src/roborscht_description/rviz/: roborscht.rviz
src/roborscht_description/urdf/: finger.csv  finger.urdf  roborscht_v0.urdf  roborscht_v1.urdf  roborscht_v2.urdf  roborscht_v3.urdf  tm5x-900-nominal.urdf
(+46 files in other folders)
